--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: ar-video-display
     env: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "./build.sh && pip install -r requirements.txt"
     startCommand: "python app.py"
     plan: free
