--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.2.2
-Werkzeug==2.2.2
-opencv-python==4.5.5.64
+Flask==3.1.0
+Werkzeug==3.1.3
+opencv-python==4.8.1.78
 numpy==1.26.0
-pyzbar>=0.1.8
+pyzbar==0.1.9
 qrcode==8.0
